kubernetes/poi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-deployment
  labels:
    app: poi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
        version: '1.0'
    spec:
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname"
            nodePublishSecretRef:                       # Only required when using service principal mode
              name: secrets-store-creds                 # Only required when using service principal mode                        
      containers:
      - name: poi
        image: registrycyb9188.azurecr.io/tripinsights/poi:1.0
        resources:
            limits:
              cpu: 250m
              memory: 256Mi
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: "/secrets" # Azure KeyVault
            name: secrets-store-inline
            readOnly: true
        livenessProbe:
          httpGet:
            path: /api/poi/healthcheck
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /api/poi/healthcheck
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 3
