kubernetes/trips-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips # the label for the pods and the deployments
    spec:    
      volumes:
        - name: configmap
          configMap:
            name: tripinsights-config    
      containers:
      - name: trips
        image: registrycyb9188.azurecr.io/tripinsights/trips:1.0 # IMPORTANT: update with your own repository
        imagePullPolicy: Always
        ports:
        - containerPort: 80 # the application listens to this port
        volumeMounts:
          - mountPath: "/secrets" # this will be the configmap
            name: configmap
            readOnly: true        
        resources:
          requests: # minimum resources required
            cpu: 250m
            memory: 64Mi
          limits: # maximum resources allocated
            cpu: 250m
            memory: 256Mi
