kubernetes/user-java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  labels:
    app: user-java
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
        version: '1.0'
    spec:
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname"
            nodePublishSecretRef:                       # Only required when using service principal mode
              name: secrets-store-creds              
      containers:
      - name: user-java
        image: registrycyb9188.azurecr.io/tripinsights/user-java:1.0
        resources:
            limits:
              cpu: 250m
              memory: 256Mi
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: "/secrets" # this will be the configmap
            name: secrets-store-inline
            readOnly: true
