kubernetes/poi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poi-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: poi
    version: '1.0'
