kubernetes/tripviewer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: tripviewer
    version: '1.0'
