kubernetes/user-java-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-java-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: user-java
    version: '1.0'
