kubernetes/userprofile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: userprofile
    version: '1.0'
