kubernetes/wcf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wcf-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wcf
    version: '1.0'
